--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,8 @@ dependencies {
     implementation 'androidx.activity:activity-compose:1.3.1'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+    def nav_version = "2.4.2"
+    implementation "androidx.navigation:navigation-compose:$nav_version"
     implementation 'androidx.compose.material3:material3:1.0.0-alpha13'
 //    implementation 'androidx.compose.material:material:1.1.1'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
