Initial installation process rework - Use Apache Compress for packing and unpack files - Replace installation SnackBar with LinearProgressBar on dialog - Support cancel installation

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,5 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+    implementation 'org.apache.commons:commons-compress:1.21'
 }
