--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,7 +65,10 @@ dependencies {
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.0'
     implementation 'androidx.activity:activity-compose:1.5.0'
+    implementation("androidx.hilt:hilt-navigation-compose:1.0.0")
+    implementation 'org.tukaani:xz:1.9'
     implementation "androidx.navigation:navigation-compose:2.5.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.0"
     implementation 'androidx.compose.material3:material3:1.0.0-alpha14'
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
