--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     package="vegabobo.dsusideloader">
 
     <application
-        android:name=".DSUSideloaderApp"
+        android:name=".DSUSideloaderApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -14,9 +14,9 @@
         android:theme="@style/Theme.DSUHelper"
         tools:targetApi="31">
         <activity
-            android:name=".NewMainActivity"
+            android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/title_activity_new_main"
+            android:label="@string/app_name"
             android:theme="@style/Theme.DSUHelper">
 
             <intent-filter>
@@ -27,17 +27,14 @@
 
         </activity>
         <activity
-            android:name=".AboutActivity"
+            android:name=".old.AboutActivity"
             android:exported="false" />
         <activity
-            android:name=".LogsActivity"
+            android:name=".old.LogsActivity"
             android:exported="false" />
         <activity
-            android:name=".RunOnAdbActivity"
+            android:name=".old.RunOnAdbActivity"
             android:exported="false" />
-        <activity
-            android:name=".MainActivity"
-            android:exported="true" />
     </application>
 
 </manifest>
