--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,13 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="vegabobo.dsusideloader">
 
-    <uses-permission android:name="android.permission.INSTALL_DYNAMIC_SYSTEM"
+    <uses-permission
+        android:name="android.permission.INSTALL_DYNAMIC_SYSTEM"
         tools:ignore="ProtectedPermissions" />
 
-    <uses-permission android:name="android.permission.READ_LOGS"
+    <uses-permission
+        android:name="android.permission.READ_LOGS"
         tools:ignore="ProtectedPermissions" />
 
-    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"
+    <uses-permission
+        android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"
         tools:ignore="ProtectedPermissions" />
 
     <application
@@ -52,6 +55,13 @@
             android:exported="true"
             android:multiprocess="false"
             android:permission="android.permission.INTERACT_ACROSS_USERS_FULL" />
+
+        <service
+            android:name="vegabobo.dsusideloader.privilegedservice.SystemService"
+            android:enabled="true"
+            android:exported="false" />
+
     </application>
+
 
 </manifest>
