--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="vegabobo.dsusideloader">
+    package="vegabobo.dsusideloader"
+    tools:ignore="ProtectedPermissions">
 
-    <uses-permission
-        android:name="android.permission.INSTALL_DYNAMIC_SYSTEM"
-        tools:ignore="ProtectedPermissions" />
+    <uses-permission android:name="android.permission.INSTALL_DYNAMIC_SYSTEM" />
 
-    <uses-permission
-        android:name="android.permission.READ_LOGS"
-        tools:ignore="ProtectedPermissions" />
+    <uses-permission android:name="android.permission.MANAGE_DYNAMIC_SYSTEM" />
 
-    <uses-permission
-        android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"
-        tools:ignore="ProtectedPermissions" />
+    <uses-permission android:name="android.permission.READ_LOGS" />
+
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+
+    <uses-permission android:name="android.permission.FORCE_STOP_PACKAGES" />
 
     <application
         android:name=".DSUSideloaderApplication"
@@ -57,7 +56,7 @@
             android:permission="android.permission.INTERACT_ACROSS_USERS_FULL" />
 
         <service
-            android:name="vegabobo.dsusideloader.privilegedservice.SystemService"
+            android:name="vegabobo.dsusideloader.privapi.PrivilegedSystemService"
             android:enabled="true"
             android:exported="false" />
 
