Setup about screen

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,8 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
+    id 'com.mikepenz.aboutlibraries.plugin'
+    id 'kotlinx-serialization'
 }
 
 android {
@@ -79,6 +81,9 @@ dependencies {
     implementation "com.google.dagger:hilt-android:2.42"
     kapt "com.google.dagger:hilt-compiler:2.42"
     implementation "com.github.topjohnwu.libsu:service:5.0.1"
+    implementation "com.mikepenz:aboutlibraries-core:10.4.0"
+    implementation "com.mikepenz:aboutlibraries-compose:10.4.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.0"
 
     def shizuku_version = '12.1.0'
     implementation "dev.rikka.shizuku:api:$shizuku_version"
