--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
 buildscript {
+    ext.kotlin_version = '1.6.10'
+    repositories { mavenCentral() }
     dependencies {
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.42'
+        classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
     }
     ext {
         compose_version = '1.3.0-alpha01'
@@ -10,6 +13,9 @@ plugins {
     id 'com.android.application' version '7.2.2' apply false
     id 'com.android.library' version '7.2.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+    id 'com.mikepenz.aboutlibraries.plugin' version "10.4.0" apply false
+    id 'org.jetbrains.kotlin.multiplatform' version '1.6.10' apply false
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.6.10' apply false
 }
 
 task clean(type: Delete) {
