--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,18 +4,17 @@
     package="vegabobo.dsusideloader"
     tools:ignore="ProtectedPermissions">
 
+    <!-- Privileged permissions -->
     <uses-permission android:name="android.permission.INSTALL_DYNAMIC_SYSTEM" />
-
-    <uses-permission android:name="android.permission.MANAGE_DYNAMIC_SYSTEM" />
-
     <uses-permission android:name="android.permission.READ_LOGS" />
-
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
-
     <uses-permission android:name="android.permission.FORCE_STOP_PACKAGES" />
 
-    <uses-permission android:name="android.permission.INTERNET" />
+    <!-- MANAGE_DYNAMIC_SYSTEM has signature protection level, but declared anyway -->
+    <uses-permission android:name="android.permission.MANAGE_DYNAMIC_SYSTEM" />
 
+    <!-- Permissions used by updater -->
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
 
     <application
@@ -26,19 +25,15 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.DSUHelper"
-        tools:targetApi="31">
+        android:theme="@style/Theme.DSUHelper">
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.DSUHelper">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
 
         <provider
