--- a/versions.properties
+++ b/versions.properties
@@ -7,6 +7,8 @@
 #### suppress inspection "SpellCheckingInspection" for whole file
 #### suppress inspection "UnusedProperty" for whole file
 
+plugin.org.jmailen.kotlinter=3.12.0
+
 version.androidx.navigation=2.5.2
 
 version.org.jacoco..org.jacoco.ant=0.8.7
